--- a/view/contactGuest.ejs
+++ b/view/contactGuest.ejs
@@ -1,13 +1,254 @@
 <%- include('includes/header') %>
-<div class="max-w-xs mx-auto"><%- include('includes/flash') %></div>
-<%- include('includes/goToHomePage') %>
-<div class="max-w-sm sm:max-w-xs mx-auto">
-  <%- include('includes/profileLong') %>
-  <!-- SHOW NUMBER OF COMMENTS AND LIKES -->
-  <%- include('includes/homepageForEachProfileGuest', {profile: profile}) %>
-  <!-- SHOW NUMBER OF COMMENTS AND LIKES END -->
-  <%- include('includes/toggleMoreProfile') %>
+
+<div class="min-h-full">
+  <main class="py-10">
+    <div class="max-w-xs mx-auto"><%- include('includes/flash') %></div>
+    <!-- Page header -->
+    <div class="mx-auto max-w-3xl px-4 sm:px-6 md:flex md:items-center md:justify-between md:space-x-5 lg:max-w-7xl lg:px-8">
+      <div class="flex items-center space-x-5">
+        <div class="flex-shrink-0">
+          <div class="relative">
+            <% if(profile.photo){ %>
+            <img class="h-16 w-16 rounded-full" src="<%= profile.photo %>" alt="<%= profile.firstName %> <%= profile.lastName %>" />
+            <% } else { %>
+            <img class="h-16 w-16 rounded-full" src="../../static/blank.png" alt="Blank profile pic" />
+            <%}%>
+            <span class="absolute inset-0 rounded-full shadow-inner" aria-hidden="true"></span>
+          </div>
+        </div>
+        <div>
+          <h1 class="text-2xl font-bold text-gray-900"><%= profile.firstName %> <%= profile.lastName %></h1>
+          <p class="text-sm font-medium text-gray-500">Graduated <datetime datetime="<%= new Date(profile.year) %>" class="text-gray-900"><%= profile.year %></datetime></p>
+        </div>
+      </div>
+      <div class="justify-stretch mt-6 flex flex-col-reverse space-y-4 space-y-reverse sm:flex-row-reverse sm:justify-end sm:space-y-0 sm:space-x-3 sm:space-x-reverse md:mt-0 md:flex-row md:space-x-3">
+        <div class="justify-stretch mt-6 flex flex-col space-y-3 sm:flex-row sm:space-y-0 sm:space-x-4">
+          <% if(user){ %>
+          <a href="/contacts/<%= user.username %>/edit" class="mr-3 inline-flex justify-center rounded-md border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2">
+            <!-- Heroicon name: mini/pencil -->
+            <svg class="-ml-1 mr-2 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <path d="M2.695 14.763l-1.262 3.154a.5.5 0 00.65.65l3.155-1.262a4 4 0 001.343-.885L17.5 5.5a2.121 2.121 0 00-3-3L3.58 13.42a4 4 0 00-.885 1.343z" />
+            </svg>
+            <span>Edit</span>
+          </a>
+
+          <a href="/account/<%= user.username %>" class="mr-3 inline-flex justify-center rounded-md border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2">
+            <!-- Heroicon name: mini/cog -->
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="-ml-1 mr-2 h-5 w-5 text-gray-400" aria-hidden="true">
+              <path fill-rule="evenodd" d="M7.84 1.804A1 1 0 018.82 1h2.36a1 1 0 01.98.804l.331 1.652a6.993 6.993 0 011.929 1.115l1.598-.54a1 1 0 011.186.447l1.18 2.044a1 1 0 01-.205 1.251l-1.267 1.113a7.047 7.047 0 010 2.228l1.267 1.113a1 1 0 01.206 1.25l-1.18 2.045a1 1 0 01-1.187.447l-1.598-.54a6.993 6.993 0 01-1.929 1.115l-.33 1.652a1 1 0 01-.98.804H8.82a1 1 0 01-.98-.804l-.331-1.652a6.993 6.993 0 01-1.929-1.115l-1.598.54a1 1 0 01-1.186-.447l-1.18-2.044a1 1 0 01.205-1.251l1.267-1.114a7.05 7.05 0 010-2.227L1.821 7.773a1 1 0 01-.206-1.25l1.18-2.045a1 1 0 011.187-.447l1.598.54A6.993 6.993 0 017.51 3.456l.33-1.652zM10 13a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd" />
+            </svg>
+            <span>Settings</span>
+          </a>
+          <% } %>
+          <a href="mailto:<%= profile.email %>" class="inline-flex justify-center rounded-md border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2">
+            <!-- Heroicon name: mini/envelope -->
+            <svg class="-ml-1 mr-2 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <path d="M3 4a2 2 0 00-2 2v1.161l8.441 4.221a1.25 1.25 0 001.118 0L19 7.162V6a2 2 0 00-2-2H3z" />
+              <path d="M19 8.839l-7.77 3.885a2.75 2.75 0 01-2.46 0L1 8.839V14a2 2 0 002 2h14a2 2 0 002-2V8.839z" />
+            </svg>
+            <span>Message</span>
+          </a>
+          <% if(profile.phone) {%>
+          <a href="tel:<%= profile.phone %>" class="inline-flex justify-center rounded-md border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2">
+            <!-- Heroicon name: mini/phone -->
+            <svg class="-ml-1 mr-2 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <path fill-rule="evenodd" d="M2 3.5A1.5 1.5 0 013.5 2h1.148a1.5 1.5 0 011.465 1.175l.716 3.223a1.5 1.5 0 01-1.052 1.767l-.933.267c-.41.117-.643.555-.48.95a11.542 11.542 0 006.254 6.254c.395.163.833-.07.95-.48l.267-.933a1.5 1.5 0 011.767-1.052l3.223.716A1.5 1.5 0 0118 15.352V16.5a1.5 1.5 0 01-1.5 1.5H15c-1.149 0-2.263-.15-3.326-.43A13.022 13.022 0 012.43 8.326 13.019 13.019 0 012 5V3.5z" clip-rule="evenodd" />
+            </svg>
+            <span>Call</span>
+          </a>
+          <%}%>
+        </div>
+      </div>
+    </div>
+
+    <div class="mx-auto mt-8 grid max-w-3xl grid-cols-1 gap-6 sm:px-6 lg:max-w-7xl lg:grid-flow-col-dense lg:grid-cols-3">
+      <div class="space-y-6 lg:col-span-2 lg:col-start-1">
+        <!-- Description list-->
+        <section aria-labelledby="applicant-information-title">
+          <div class="bg-white shadow sm:rounded-lg">
+            <div class="px-4 py-5 sm:px-6">
+              <h2 id="applicant-information-title" class="text-lg font-medium leading-6 text-gray-900">About</h2>
+              <p class="mt-1 max-w-2xl text-sm text-gray-500">Personal details</p>
+            </div>
+            <div class="border-t border-gray-200 px-4 py-5 sm:px-6">
+              <dl class="grid grid-cols-1 gap-x-4 gap-y-8 sm:grid-cols-2">
+                <div class="sm:col-span-1">
+                  <dt class="text-sm font-medium text-gray-500">Nickname</dt>
+                  <dd class="mt-1 text-sm text-gray-900"><%= profile.nickname %></dd>
+                </div>
+                <div class="sm:col-span-1">
+                  <dt class="text-sm font-medium text-gray-500">Lives in</dt>
+                  <dd class="mt-1 text-sm text-gray-900"><%= profile.residence %></dd>
+                </div>
+                <div class="sm:col-span-1">
+                  <dt class="text-sm font-medium text-gray-500">Occupation</dt>
+                  <dd class="mt-1 text-sm text-gray-900"><%= profile.occupation %></dd>
+                </div>
+                <div class="sm:col-span-1">
+                  <dt class="text-sm font-medium text-gray-500">Birthday</dt>
+                  <dd class="mt-1 text-sm text-gray-900"><%= profile.month %> <%= profile.day %></dd>
+                </div>
+                <div class="sm:col-span-1">
+                  <dt class="text-sm font-medium text-gray-500">Birthday</dt>
+                  <dd class="mt-1 text-sm text-gray-900"><%= profile.month %> <%= profile.day %></dd>
+                </div>
+                <div class="sm:col-span-2">
+                  <dt class="text-sm font-medium text-gray-500">Phone</dt>
+                  <dd class="mt-1 text-sm text-gray-900"><%= profile.phone %></dd>
+                </div>
+              </dl>
+            </div>
+          </div>
+        </section>
+
+        <!-- Comments-->
+
+        <section id="comments-section" aria-labelledby="notes-title">
+          <div class="bg-white shadow sm:overflow-hidden sm:rounded-lg">
+            <div class="divide-y divide-gray-200">
+              <div class="px-4 py-5 sm:px-6">
+                <h2 id="notes-title" class="text-lg font-medium text-gray-900">Comments</h2>
+              </div>
+              <div class="px-4 py-6 sm:px-6">
+                <ul id="comment-container-ul" class="space-y-8">
+                  <% if(profile.comments){ %> <% profile.comments.reverse().forEach(comment => { %>
+                  <li id="li-comment">
+                    <div class="flex space-x-3">
+                      <a href="" class="flex-shrink-0">
+                        <% if(comment.photo){ %>
+                        <img class="h-10 w-10 rounded-full" src="<%= comment.photo %>" alt="" />
+                        <% } else { %>
+                        <img class="h-10 w-10 rounded-full" src="https://gss-gwarinpa.s3.us-east-2.amazonaws.com/blank.png" alt="" />
+                      </a>
+                      <%}%>
+                      <div>
+                        <div class="text-sm">
+                          <% if(comment.visitorUsername) {%>
+                          <a href="/contacts/<%= comment.visitorUsername %>" class="font-medium text-gray-900"><%= comment.visitorFirstName %></a>
+                          <% } else { %>
+                          <span class="font-medium text-gray-900"><%= comment.visitorFirstName %></span>
+                          <% } %>
+                        </div>
+                        <div class="mt-1 text-sm text-gray-700">
+                          <p class="comment"><%- filterUserHTML(comment.comment)%></p>
+                        </div>
+                        <div class="mt-2 space-x-2 text-sm">
+                          <datetime datetime="<%= comment.commentDate %>" class="comment-date-time font-medium text-gray-500"> <%= comment.commentDate %> </datetime>
+                          <% if(user){ %>
+                          <span class="font-medium text-gray-500">&middot;</span>
+                          <button id="edit-comment-button" class="font-medium text-gray-900">Edit</button>
+                          <button id="delete-comment-button" data-comment-id="<%- comment.commentId %>" data-contact-email="<%= profile.email %>" class="font-medium text-red-600">Delete</button>
+                          <%}%>
+                        </div>
+                      </div>
+                    </div>
+
+                    <!-- EDIT COMMENT FORM -->
+                    <div class="edit-comment-parent modal shadow-2xl" style="display: none">
+                      <textarea id="input-comment" data-comment-id="<%= comment.commentId %>" class="w-full p-2 border border-green-400 rounded" style="background-color: #f2f3f5; white-space: pre-wrap; overflow: hidden"><%= comment.comment %></textarea>
+                      <div class="flex justify-between py-4">
+                        <button id="cancel-comment-button" class="bg-green-600 text-white px-2 rounded hover:bg-green-800">Cancel</button>
+                        <button data-comment-id="<%= comment.commentId %>" data-contact-email="<%= profile.email %>" id="update-comment-button" class="bg-green-600 text-white px-2 rounded hover:bg-green-800">Update</button>
+                      </div>
+                    </div>
+                  </li>
+                  <% }) %> <%}%>
+                </ul>
+              </div>
+            </div>
+
+            <!-- ADD COMMENT -->
+            <% if(user){ %>
+            <div class="bg-gray-50 px-4 py-6 sm:px-6">
+              <div class="flex space-x-3">
+                <div class="flex-shrink-0">
+                  <% if(photoUrlForComment){ %>
+                  <img class="h-10 w-10 rounded-full" src="<%= photoUrlForComment %>" alt="" />
+                  <% } else { %>
+                  <img class="h-10 w-10 rounded-full" src="../../static/blank.png" alt="" />
+                  <%}%>
+                </div>
+
+                <div class="min-w-0 flex-1">
+                  <div>
+                    <label for="comment" class="sr-only">About</label>
+                    <textarea id="input-comment" class="block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm" placeholder="What's on your mind?"></textarea>
+                  </div>
+                  <div class="mt-3 flex items-center justify-between">
+                    <button id="add-comment-button" data-visitor-email="<%= user.email %>" data-contact-email="<%= profile.email %>" class="inline-flex items-center justify-center rounded-md border border-transparent bg-blue-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2">Comment</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <%}%>
+          </div>
+        </section>
+      </div>
+
+      <section aria-labelledby="timeline-title" class="lg:col-span-1 lg:col-start-3">
+        <div class="bg-white px-4 py-5 shadow sm:rounded-lg sm:px-6">
+          <h2 id="timeline-title" class="text-lg font-medium text-gray-900">Timeline</h2>
+
+          <!-- Activity Feed -->
+          <div class="mt-6 flow-root">
+            <ul class="-mb-8">
+              <li>
+                <div class="relative pb-8">
+                  <span class="absolute top-4 left-4 -ml-px h-full w-0.5 bg-gray-200" aria-hidden="true"></span>
+                  <div class="relative flex space-x-3">
+                    <div>
+                      <span class="h-8 w-8 rounded-full bg-gray-200 flex items-center justify-center ring-8 ring-white">
+                        <!-- Heroicon name: mini/hand-thumb-up -->
+                        <svg id="like-button-svg" class="<%= locals.likesHelper.color %>-fill h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                          <path d="M1 8.25a1.25 1.25 0 112.5 0v7.5a1.25 1.25 0 11-2.5 0v-7.5zM11 3V1.7c0-.268.14-.526.395-.607A2 2 0 0114 3c0 .995-.182 1.948-.514 2.826-.204.54.166 1.174.744 1.174h2.52c1.243 0 2.261 1.01 2.146 2.247a23.864 23.864 0 01-1.341 5.974C17.153 16.323 16.072 17 14.9 17h-3.192a3 3 0 01-1.341-.317l-2.734-1.366A3 3 0 006.292 15H5V8h.963c.685 0 1.258-.483 1.612-1.068a4.011 4.011 0 012.166-1.73c.432-.143.853-.386 1.011-.814.16-.432.248-.9.248-1.388z" />
+                        </svg>
+                      </span>
+                    </div>
+
+                    <div class="flex min-w-0 flex-1 justify-between space-x-4 pt-1.5">
+                      <p id="likes-container" class="first-line:text-sm text-gray-500"><%= locals.likesHelper.peopleWhoLiked %></p>
+                    </div>
+                    <div class="relative whitespace-nowrap text-right text-sm text-gray-500">
+                      <!-- TOGGLE: SHOW NAMES OF USERS WHO LIKED THIS PROFILE -->
+                      <ul id="names-container-ul" class="pt-1.5" style="display: none"></ul>
+                      <!-- TOGGLE: SHOW NAMES OF USERS WHO LIKED THIS PROFILE END-->
+                    </div>
+                  </div>
+                </div>
+              </li>
+
+              <li>
+                <div class="relative pb-8">
+                  <div class="relative flex space-x-3">
+                    <div>
+                      <span class="h-8 w-8 rounded-full bg-green-500 flex items-center justify-center ring-8 ring-white">
+                        <svg class="h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
+                          <path fill-rule="evenodd" d="M3.43 2.524A41.29 41.29 0 0110 2c2.236 0 4.43.18 6.57.524 1.437.231 2.43 1.49 2.43 2.902v5.148c0 1.413-.993 2.67-2.43 2.902a41.202 41.202 0 01-5.183.501.78.78 0 00-.528.224l-3.579 3.58A.75.75 0 016 17.25v-3.443a41.033 41.033 0 01-2.57-.33C1.993 13.244 1 11.986 1 10.573V5.426c0-1.413.993-2.67 2.43-2.902z" clip-rule="evenodd" />
+                        </svg>
+                      </span>
+                    </div>
+                    <div class="flex min-w-0 flex-1 justify-between space-x-4 pt-1.5">
+                      <p><% if(profile.comments){ %> <% if(profile.comments.length > 1){ %> <%= profile.comments.length == 0 ? "" : profile.comments.length + ' comments'%> <% } else { %> <%= profile.comments.length == 0 ? "" : profile.comments.length + ' comment'%> <% } %> <% } else { %> Be the first to say hello! <% } %></p>
+                    </div>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <% if(user){%>
+          <div class="justify-stretch mt-6 flex flex-col">
+            <button id="likes-button" data-visitor-name="<%= user.firstName %>" data-visitor-email="<%= user.email %>" data-contact-email="<%= profile.email %>" class="<%= locals.likesHelper.color%>-toggle inline-flex items-center justify-center rounded-md border border-transparent bg-blue-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2">
+              <svg id="like-button-svg" class="<%= locals.likesHelper.color%>-fill" xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="white" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M14 9V5a3 3 0 0 0-3-3l-4 9v11h11.28a2 2 0 0 0 2-1.7l1.38-9a2 2 0 0 0-2-2.3zM7 22H4a2 2 0 0 1-2-2v-7a2 2 0 0 1 2-2h3"></path>
+              </svg>
+              <p id="like-word" class="ml-1 <%= locals.likesHelper.color%>-like-color"><%= locals.likesHelper.text %></p>
+            </button>
+          </div>
+          <%}%>
+        </div>
+      </section>
+    </div>
+  </main>
 </div>
-<% if(!user){ %>
-<div class="mt-3 mx-auto" style="width: 18rem"><%- include('includes/loginToCommentLike') %></div>
-<%}%> <%- include('includes/commentsForm') %> <%-include('includes/footer') %>
+
+<%-include('includes/footer') %>
